--- a/PROYECTO UmamiUrbano/src/app/pages/login/login.page.html
+++ b/PROYECTO UmamiUrbano/src/app/pages/login/login.page.html
@@ -23,7 +23,7 @@
       
       <ion-button id="open-loading" expand="block">Iniciar sesión</ion-button>
       <ion-loading trigger="open-loading" message="Iniciando" [duration]="3000" spinner="circles"></ion-loading>
-      <ion-button exapand="block" fill="clear">Recuperar contraseña</ion-button>
+      <ion-button exapand="block" fill="clear">Registrarse</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
