--- a/PROYECTO UmamiUrbano/src/app/pages/home/home.page.html
+++ b/PROYECTO UmamiUrbano/src/app/pages/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
+    <ion-title #animar1>
       UmamiUrbano
     </ion-title>
   </ion-toolbar>
@@ -15,15 +15,16 @@
 
   <ion-card>
     <ion-card-header>
-      <ion-card-title>¡Bienvenido!</ion-card-title>
-      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+      <ion-card-title>¡Bienvenido {{data.usuario}}!</ion-card-title>
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      ¿Qué deseas hacer hoy?
     </ion-card-content>
   
     <ion-button fill="clear">Ver perfil</ion-button>
     <ion-button fill="clear">Configuración</ion-button>
+    <ion-button fill="clear">Ver restaurantes</ion-button>
+    <ion-button fill="clear">Ingresar opinión</ion-button>
   </ion-card>
 </ion-content>
