--- a/PROYECTO UmamiUrbano/src/app/pages/recuperar/recuperar.page.html
+++ b/PROYECTO UmamiUrbano/src/app/pages/recuperar/recuperar.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="fondoxd">
   <ion-card>
     <ion-card-header>
       <ion-card-title>Registro</ion-card-title>
@@ -32,8 +32,7 @@
           <ion-input type="password" [clearInput]="true"></ion-input>
         </ion-item>
 
-        <ion-button id="open-loading" expand="block">Registrarse</ion-button>
-      <ion-loading trigger="open-loading" message="Iniciando" [duration]="1500" spinner="circles"></ion-loading>
+        <ion-button expand="block" (click)="login()">Registrarse</ion-button>
       </ion-list>
     </ion-card-content>
   </ion-card>
