--- a/PROYECTO UmamiUrbano/src/global.scss
+++ b/PROYECTO UmamiUrbano/src/global.scss
@@ -24,3 +24,10 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+
+
+ion-content.fondo{
+    --background: url("https://htmlcolorcodes.com/assets/images/html-color-codes-color-tutorials-hero.jpg")
+}
+
