--- a/PROYECTO UmamiUrbano/src/app/pages/login/login.page.html
+++ b/PROYECTO UmamiUrbano/src/app/pages/login/login.page.html
@@ -17,7 +17,7 @@
       <ion-card-content>
         <ion-item>
           <ion-label position="floating">Usuario</ion-label>
-          <ion-input type="text"></ion-input>
+          <ion-input type="text" [(ngModel)]="user.usuario"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Password</ion-label>
