--- a/PROYECTO UmamiUrbano/src/app/pages/home/home.page.html
+++ b/PROYECTO UmamiUrbano/src/app/pages/home/home.page.html
@@ -15,7 +15,7 @@
 
   <ion-card>
     <ion-card-header>
-      <ion-card-title>¡Bienvenido {{data.usuario}}!</ion-card-title>
+      <ion-card-title>¡Bienvenido {{user.usuario}}!</ion-card-title>
     </ion-card-header>
   
     <ion-card-content>
