--- a/PROYECTO UmamiUrbano/src/app/pages/login/login.page.html
+++ b/PROYECTO UmamiUrbano/src/app/pages/login/login.page.html
@@ -21,7 +21,7 @@
         </ion-item>
         <ion-item>
           <ion-label position="floating">Password</ion-label>
-          <ion-input type="password"></ion-input>
+          <ion-input type="password" [(ngModel)]="user.password"></ion-input>
         </ion-item>
         
         <ion-button id="open-loading" expand="block" (click)="ingresar()">Iniciar sesión</ion-button>
