--- a/PROYECTO UmamiUrbano/src/app/pages/recuperar/recuperar.page.html
+++ b/PROYECTO UmamiUrbano/src/app/pages/recuperar/recuperar.page.html
@@ -16,6 +16,11 @@
           <ion-label position="floating">Nombre completo</ion-label>
           <ion-input type="text" [clearInput]="true"></ion-input>
         </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Fecha Nacimiento</ion-label>
+          <ion-input type="date"></ion-input>
+        </ion-item>
   
         <ion-item>
           <ion-label position="floating">Correo electrónico</ion-label>
