--- a/PROYECTO UmamiUrbano/src/app/pages/home/home.page.html
+++ b/PROYECTO UmamiUrbano/src/app/pages/home/home.page.html
@@ -41,14 +41,14 @@
     <ion-button shape="block" (click)="borrarContacto()">Borrar Contacto</ion-button>
     <ion-button shape="block" (click)="borrarBD()">Borrar BD</ion-button>
   </ion-card>
-  <ion-card>
+  <!-- <ion-card>
     <ion-list>
-      <ion-item *ngFor="let item of items; let index">
+      <ion-item *ngFor="let item of component; let index">
         <ion-avatar slot="start">
           <img [src]="'https://picsum.photos/80/80?random=' + index" alt="avatar" />
         </ion-avatar>
         <ion-label>{{ item }}</ion-label>
       </ion-item>
     </ion-list>
-  </ion-card>
+  </ion-card>-->
 </ion-content>
