--- a/PROYECTO UmamiUrbano/src/app/pages/login/login.page.scss
+++ b/PROYECTO UmamiUrbano/src/app/pages/login/login.page.scss
@@ -23,7 +23,7 @@
   
   
   .card {
-    background: #191c29;
+    background: #ffffff;
     width: var(--card-width);
     height: var(--card-height);
     padding: 3px;
