--- a/PROYECTO UmamiUrbano/src/app/pages/recuperar/recuperar.page.html
+++ b/PROYECTO UmamiUrbano/src/app/pages/recuperar/recuperar.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="fondoxd">
+<ion-content [fullscreen]="true" class="fondouno">
   <ion-card>
     <ion-card-header>
       <ion-card-title>Registro</ion-card-title>
