--- a/PROYECTO UmamiUrbano/src/global.scss
+++ b/PROYECTO UmamiUrbano/src/global.scss
@@ -28,6 +28,17 @@
 
 
 ion-content.fondo{
-    --background: url("https://htmlcolorcodes.com/assets/images/html-color-codes-color-tutorials-hero.jpg")
+    --background: url("https://iphoneswallpapers.com/wp-content/uploads/2021/12/Fast-Food-Lover-iPhone-Wallpaper.jpg")
 }
 
+ion-content.fondouno{
+    --background: url("https://i.pinimg.com/originals/75/fa/56/75fa5671e7e528d50e784fd1998588aa.jpg")
+}
+
+ion-content.login{
+    --background: url("https://i.pinimg.com/736x/f5/05/24/f50524ee5f161f437400aaf215c9e12f.jpg")
+}
+
+.centrar {
+    text-align: center;
+}
