--- a/PROYECTO UmamiUrbano/src/app/pages/home/home.page.html
+++ b/PROYECTO UmamiUrbano/src/app/pages/home/home.page.html
@@ -21,14 +21,9 @@
     <ion-card-content>
       ¿Qué deseas hacer hoy?
     </ion-card-content>
-  
-    <ion-button fill="clear">Ver perfil</ion-button>
-    <ion-button fill="clear">Configuración</ion-button>
-    <ion-button fill="clear">Ver restaurantes</ion-button>
-    <ion-button fill="clear">Ingresar opinión</ion-button>
-
   </ion-card>
-  <ion-card>
+
+  <!-- <ion-card>
     <ion-item>
       <ion-label position="floating">Nombre</ion-label>
       <ion-input type="text" [clearInput]="true"[(ngModel)]="nombre"></ion-input>
@@ -40,7 +35,28 @@
     <ion-button shape="block" (click)="guardar()">Guardar Contacto</ion-button>
     <ion-button shape="block" (click)="borrarContacto()">Borrar Contacto</ion-button>
     <ion-button shape="block" (click)="borrarBD()">Borrar BD</ion-button>
-  </ion-card>
+  </ion-card> -->
+
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="home">
+        <ion-icon name="home"></ion-icon>
+        Inicio
+      </ion-tab-button>
+      <ion-tab-button tab="radio">
+        <ion-icon name="search"></ion-icon>
+        Buscar restaurante
+      </ion-tab-button>
+      <ion-tab-button tab="library">
+        <ion-icon name="pencil"></ion-icon>
+        Escribir comentario
+      </ion-tab-button>
+      <ion-tab-button tab="search">
+        <ion-icon name="person"></ion-icon>
+        Mi perfil
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
   <!-- <ion-card>
     <ion-list>
       <ion-item *ngFor="let item of component; let index">
