--- a/PROYECTO UmamiUrbano/src/app/pages/login/login.page.html
+++ b/PROYECTO UmamiUrbano/src/app/pages/login/login.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="prueba">
+<ion-content [fullscreen]="true" class="login" >
 
 
   <div class="card">
